<resources>
    <string name="app_name">Salon</string>
    <string name="icon_description">Icon</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_error">Incorrect username or password</string>
    <string name="username_or_password_can_t_be_empty">Username or password can\'t be empty</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="please_fill_all_the_information">Please fill all the information</string>
    <string name="title_activity_salon_list">SalonListActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="customer_information">Customer Information</string>
    <string name="customer_name">Full Name</string>
    <string name="customer_phone">Phone Number</string>
    <string name="customer_email">Email</string>
    <string name="appointment_information">Appointment Information</string>
    <string name="service_name">Service Name</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="service_price">Service Price</string>
    <string name="voucher">Voucher</string>
    <string name="vnd">VND</string>
    <string name="title_profile">Profile</string>
    <string name="title_history">History</string>
    <string name="welcome_back">Welcome back</string>

    <string-array name="salon_name">
        <item>Siu thị tóc</item>
        <item>The Gentleman</item>
        <item>My Hair</item>
        <item>Híu Barber</item>
        <item>Ling Barbershop</item>
        <item>Mai Thị Tóc</item>
        <item>Tóc đẹp tóc xinh</item>
        <item>Loz ling ăn kít</item>
    </string-array>
    <string-array name="salon_address">
        <item>115 Trần Hưng Đạo</item>
        <item>85/4 Mai Thị Lựu</item>
        <item>99 Minh Phụng</item>
        <item>46/5/7 Miền Đất Hứa</item>
        <item>88 Suối vàng</item>
        <item>376 Hai Bà Trưng</item>
        <item>467 Bà Huyện Thanh Quan</item>
        <item>11/5a Xa lộ Ming Híu</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="pick_stylist">Select Stylist</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="enter_voucher">Enter Voucher</string>
    <string name="member">Member</string>
    <string name="new_customer">New Customer</string>
    <string name="confirm">CONFIRM</string>
    <string name="check_member">Check Member</string>
    <string name="cancel">Cancel</string>
    <string name="choose_stylist">Choose Stylist</string>
    <string name="available">Available</string>
    <string name="loading">Loading...</string>

    <string-array name="roles">
        <item>Admin</item>
        <item>Người dùng thường</item>
        <item>Nhân viên</item>
        <item>Quản lý salon</item>
    </string-array>

    <integer-array name="roleValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </integer-array>

    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="by_date">By Date</string>
    <string name="by_month">By Month</string>
    <string name="by_year">By Year</string>

</resources>