<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".activity.BookingHistoryFilterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_date"
        android:textSize="16sp"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_border"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/bookingFilterSpDate"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_month"
        android:textSize="16sp"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_border"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/bookingFilterSpMonth"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_year"
        android:textSize="16sp"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_border"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/bookingFilterSpYear"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:background="@drawable/primary_button"
            android:elevation="4dp"
            android:id="@+id/bookingFilterBtnConfirm"
            />
    </LinearLayout>
</LinearLayout>