<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/home_banner_staff"
    tools:context=".activity.StylistSelectActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choose_stylist"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/stylistSelectLv"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:listSelector="@color/text_smoke"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/white_button"
            android:id="@+id/stylistSelectBtnCancel"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:background="@drawable/primary_button"
            android:id="@+id/stylistSelectBtnConfirm"
            android:layout_weight="4"
            />
    </LinearLayout>

</LinearLayout>