<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/home_banner_staff"
    android:padding="8dp"
    tools:context=".activity.BookingActivityStaff">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bookingHeader"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="16dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointment_information"
                android:textSize="16sp"
                android:textColor="@color/text_smoke"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="8dp"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_room_service_000000_24"
                    android:layout_marginEnd="16dp"
                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bookingSpService"
                    android:hint="@string/enter_voucher"
                    android:background="@drawable/input_border"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:textColorHint="@color/text_smoke"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_person_000000_24"
                    android:layout_marginEnd="16dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bookingBtnPickStylist"
                    android:text="@string/pick_stylist"
                    android:background="@drawable/input_border"
                    android:padding="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/text_smoke"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_calendar_month_24"
                    android:layout_marginEnd="16dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bookingBtnPickDate"
                    android:text="@string/select_date"
                    android:background="@drawable/input_border"
                    android:padding="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/text_smoke"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_access_time_24"
                    android:layout_marginEnd="16dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bookingBtnPickTime"
                    android:text="@string/select_time"
                    android:background="@drawable/input_border"
                    android:padding="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/text_smoke"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_attach_money_24"
                    android:layout_marginEnd="16dp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bookingEdtVoucher"
                    android:hint="@string/enter_voucher"
                    android:background="@drawable/input_border"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:textColorHint="@color/text_smoke"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="16dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_information"
                android:textSize="16sp"
                android:textColor="@color/text_smoke"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_person_000000_24"
                    android:layout_marginEnd="16dp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bookingMemberInfoEdtFullName"
                    android:hint="@string/customer_name"
                    android:background="@drawable/input_border"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:textColorHint="@color/text_smoke"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_phone_000000_24dp"
                    android:layout_marginEnd="16dp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bookingMemberInfoEdtPhone"
                    android:hint="@string/customer_phone"
                    android:background="@drawable/input_border"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:inputType="phone"
                    android:textColorHint="@color/text_smoke"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="bottom|end"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:background="@drawable/primary_button"
            android:id="@+id/bookingBtnConfirm"
            />
    </LinearLayout>
</LinearLayout>